; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_free.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stack = type { i64, i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @redcarpet_stack_free(%struct.stack* %0) #0 {
  %2 = alloca %struct.stack*, align 8
  store %struct.stack* %0, %struct.stack** %2, align 8
  %3 = load %struct.stack*, %struct.stack** %2, align 8
  %4 = icmp ne %struct.stack* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %17

6:                                                ; preds = %1
  %7 = load %struct.stack*, %struct.stack** %2, align 8
  %8 = getelementptr inbounds %struct.stack, %struct.stack* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = call i32 @free(i32* %9)
  %11 = load %struct.stack*, %struct.stack** %2, align 8
  %12 = getelementptr inbounds %struct.stack, %struct.stack* %11, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = load %struct.stack*, %struct.stack** %2, align 8
  %14 = getelementptr inbounds %struct.stack, %struct.stack* %13, i32 0, i32 1
  store i64 0, i64* %14, align 8
  %15 = load %struct.stack*, %struct.stack** %2, align 8
  %16 = getelementptr inbounds %struct.stack, %struct.stack* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
